created routes and views

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -1,6 +1,12 @@
+$footerColor: blue
+
 body
   padding: 50px
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
 
 a
   color: #00B7FF
+
+footer.page-footer
+  background-color: $footerColor
+  
