--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,24 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+<% include partials/head.ejs %>
+<body>
+    <% include partials/header.ejs %>
+    <main>
+    <div class="container"></div>
+    <div class="section no-pad-bot" id="index-banner">
+        <div class="container">
+          <h1 class="header center-on-small-only">Steven Gallo</h1>
+          <div class='row center'>
+            <h4 class ="header col s12 light center">Full Stack Web Developer</h4>
+          </div>
+          <div class="row center">
+            <a href="" id="download-button" class="btn-large waves-effect waves-light">Get Started</a>
+          </div>
+          <div class="row center"></div>
+
+          <div class=" row center">
+          </div>
+          </div>
+        </div>
+    </main>
+    <% include partials/footer.ejs %>
   </body>
 </html>
