--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,11 +1,27 @@
+html {
+  background: url("../images/forest.jpg") no-repeat center center fixed;
+  background-size: cover; }
+
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column; }
 
 a {
   color: #00B7FF; }
 
+#main {
+  background-color: rgba(225, 225, 225, 0.5); }
+
 footer.page-footer {
-  background-color: blue; }
+  background-color: rgba(225, 225, 225, 0.5); }
+
+main {
+  flex: 1 0 auto; }
+
+#download-button {
+  background-color: #2a98f3; }
 
 /*# sourceMappingURL=style.css.map */
