--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,3 +3,5 @@
     <p class="center-align">© 2017 Steven Gallo</p>
 </div>
 </footer>
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="/javascripts/bootstrap.min.js"></script>
