--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,4 @@
 <header>
-<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
- <link rel='stylesheet' href='/stylesheets/style.css' />
+<link rel="stylesheet" href="/stylesheets/css/bootstrap.css">
+<link rel='stylesheet' href='/stylesheets/style.css' />
 </header>
