--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,4 +2,5 @@
 <html>
   <head>
     <title><%= `${title}-${envi}` %></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
