--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -6,38 +6,43 @@
         <div class="col s12 m6">
           <div class="card">
             <div class="card-content white-text">
-              <span class="card-title">Card Title</span>
-              <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.</p>
+              <span class="card-title">Weather App</span>
+              <p>Mobile App for local weather and forecast</p>
             </div>
             <div class="card-action">
-              <a href="#">This is a link</a>
-              <a href="#">This is a link</a>
+              <a href="https://fast-peak-42035.herokuapp.com/"></a>
             </div>
           </div>
         </div>
         <div class="col s12 m6">
           <div class="card">
             <div class="card-content white-text">
-              <span class="card-title">Card Title</span>
-              <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.</p>
+              <span class="card-title">Blackjack</span>
+              <p>Blackjack game</p>
             </div>
             <div class="card-action">
-              <a href="#">This is a link</a>
-              <a href="#">This is a link</a>
+              <a href="https://stevengallo.github.io/project01/">Blackjack</a>
             </div>
           </div>
         </div>
-        <div class="col s12 m12">
+        <div class="col s12 m6">
           <div class="card">
             <div class="card-content white-text">
-              <span class="card-title">Card Title</span>
-              <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.</p>
+              <span class="card-title">Movie Party</span>
+              <p>Use this app to organize a movie viewing party with your friends!</p>
             </div>
             <div class="card-action">
-              <a href="#">This is a link</a>
+              <a href="https://ns-indbicdchn.now.sh/">Movie Party</a>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m6">
+          <div class="card">
+            <div class="card-content white-text">
+              <span class="card-title">Bliss</span>
+              <p>This Chrome Extension removes negtive content from a webpage. Uses Watson tone anylizer API</p>
+            </div>
+            <div class="card-action">
               <a href="#">This is a link</a>
             </div>
           </div>
